--- a/src/index.css
+++ b/src/index.css
@@ -100,10 +100,18 @@ h4 {
 }
 
 progress {
+  appearance: none;
   -webkit-appearance: none;
   width: 100%;
   height: 12px;
   grid-column: 1 / -1;
+  background-color: var(--color-medium);
+  border-radius: 100px;
+}
+
+::-moz-progress-bar {
+  background-color: var(--color-theme);
+  border-radius: 100px;
 }
 
 ::-webkit-progress-bar {
@@ -114,7 +122,6 @@ progress {
   background-color: var(--color-theme);
   border-radius: 100px;
 }
-
 .btn {
   display: block;
   font-family: inherit;
